Add Template and Mobile ALOHA example file

--- a/content/Daily Notes/2024-11-14.md
+++ b/content/Daily Notes/2024-11-14.md
@@ -14,5 +14,5 @@ It starts today.
 
 ![[Screen Shot 2024-11-14 at 7.35.48 AM.png]]
 
-[[Mobile Aloha]] is the greatest thing I've seen yet.
+[[Mobile ALOHA]] is the greatest thing I've seen yet.
 
