Log off for the day

--- a/content/Daily-Notes/2024-11-15.md
+++ b/content/Daily-Notes/2024-11-15.md
@@ -314,3 +314,929 @@ It's FINALLY TIME to TAKE THIS ON
 I'm back in public life baybee. Two years off, now it's time to get back on.
 
 Let's do this thing.
+
+Fri, 11/15/2024, 17:03
+[[Artificial Intelligence]] is the focus of the next phase of human development.
+
+Undeniably, the next process phase change we are going through is the end of [[Capitalism]] and the beginning of the [[Post-Scarcity]] Economic system. Possibly a [[Post-Labor]] society as well.
+
+How would the nature of human social relationships change if we stopped performing tasks for permission to exist and eat and sleep in a house?
+
+Might we spend more time fucking around and finding out?
+
+I think so. I've seen it play out on repeat so many times that I'm now used to it, and I know what to expect.
+
+The first thing on my agenda today is getting into a shower and staying there for a long, long time. I'll figure everything else out in due time. Let's start with bathing myself and pampering my body tonight.
+
+I deserve that.
+
+Don't waste the money, don't squander it, but definitely take full advantage.
+
+[[Airbnb]]?
+
+---
+Fri, 11/15/2024, 18:45
+Got it. I'm staying in an Airbnb with a pull out bed and a sick ass tub. 
+This is where I'm staying tonight:
+![[Screen Shot 2024-11-15 at 6.46.05 PM.png]]
+
+It's this woman's sex therapy office.
+I'm not joking.
+
+![[Screen Shot 2024-11-15 at 6.46.30 PM.png]]
+
+I went to the [[Oregrown]] cannabis shop [[Dispensary]] and now I'm gonna enjoy some legal relaxation in this tub. 
+
+## Before I sign off let me write a game that develops itself real fast
+
+I gotta finish a project that I've been wanting to do for a long, long time...
+
+The self-playing Choose Your Own Adventure story.
+
+I'm gonna code up a version of it real fast, and then tomorrow (or probably next week) I'lll work on upgrading it to [[AutoGen]] which is an INCREDIBLE framework from [[Microsoft]] that will be helping us out very much.
+
+Some very clever people have figured out how to use [Autogen](https://microsoft.github.io/autogen/0.2/) with [[Ollama]] and the results are nothing short of incredible.
+
+I'm ready to fully give myself over to the overlords but first...I gotta make a game that plays itself.
+
+For this project I'll be using AutoGen and creating a Choose Your Own Adventure game that plays itself.
+
+In the past, doing something like this would have involved manually setting up an API and running a bunch of long tests for every possible edge case until you had a pretty robust system that was (***probably***) not going to break when the users interacted with it.
+
+Now?
+
+AutoGen
+![[Pasted image 20241115185518.png]]
+
+Straight from the docs:
+![[Screen Shot 2024-11-15 at 6.55.31 PM.png]]
+
+## Getting Started with AutoGen
+---
+> *But it must be really hard to get started with AutoGen...right?*
+![[Screen Shot 2024-11-15 at 6.55.52 PM.png]]
+
+Nope.
+
+That's all you need to get started with AutoGen using Docker to run a secure environment to develop code inside of.
+
+Here's the simplest possible instantiation of a program that will develop a Choose Your Own Adventure script and play itself iteratively forever:
+
+```python
+import os
+import autogen
+from autogen import AssistantAgent, UserProxyAgent
+
+llm_config = {"model": "gpt-4", "api_key": os.environ["OPENAI_API_KEY"]}
+
+with autogen.coding.DockerCommandLineCodeExecutor(work_dir="coding") as code_executor:
+    assistant = AssistantAgent("assistant", llm_config=llm_config)
+    user_proxy = UserProxyAgent(
+        "user_proxy", code_execution_config={"executor": code_executor}
+    )
+
+    # Start the chat
+    user_proxy.initiate_chat(
+        assistant,
+        message="Develop a text-based Choose Your Own Adventure game using **python only** and nothing else. Run the game, test it, make sure it has the following elements: 1. a text-based UI 2. the ability to choose between three possible options with a fourth option that is just 'other' 3. the game should always start in the same place with the same character named Sam Iker waking up from a dream about flying up around a skyscraper 4. the game should be called 'Teleport Massive CYOA' 5. the game should log the setup and running of the game 6. the game should generate markdown files formatted in obsidian style for each event with a set of choices 7. the game should use the markdown files as reference when generating new scenarios 8. the game should keep a table with an index of scenarios 9. the game should keep a table of characters with their stats and states 10. the game should keep a table of locations with their stats and states 11. the game should keep a table of items with their stats and states 12. the game should update the tables whenever the player makes choices that affect the state of the element in question 13. the game should keep track of the actions the player took in another separate table that tracks player choices 14. the game should generate believable character dialogue using the information generated by playing the game contained in the tables and the markdown scenario files 15. the game should periodically update its own state and have a librarian function that reindexes and keeps track of the state of the game and makes sure everything is consistent 16. the game should not overdo it and should keep everything as simple and straigntforward as possible",
+    )
+```
+
+![[Pasted image 20241115190506.png]]
+
+Fri, 11/15/2024, 19:13
+I'm running into errors....
+That's why I chose to do this now. I wanted to fuck with this shit and now I am and then i'm gonna be able to close my shit and let it run and be unbothered and take a fucking bath about it.
+
+---
+Fri, 11/15/2024, 19:19
+Ok I thiiiiiiiiiink I got it running locally with Ollama...but I'm 100% not sure. It's running. It's definitely running. My laptop fans can attest to that.
+But there's not been any output to the console yet. It's been about 3 minutes. That's a normal amount of time, especially if the laptop brain is thinking really hard, but I'm 100% not sure if this is gonna work or not.
+I'll let you know if and when anything returns.
+Otherwise, I'm gonna develop an OpenAI version that uses the OpenAI models to accomplish the same thing.
+
+---
+Fri, 11/15/2024, 19:22
+
+# Holy shit it worked.
+I asked Autogen using Ollama locally to build a Choose Your Own Adventure game and this is what happened...
+
+I literally copy / pasted this from my console
+
+---
+
+```python
+assistant (to user_proxy):
+
+```python
+def start_game():
+    print("Welcome to 'The Cursed Temple'!")
+    print("You are an adventurer seeking fortune and glory in the ancient ruins of a mysterious temple.")
+    print("Your goal is to retrieve the legendary Golden Idol without getting trapped or killed by the temple's deadly traps.")
+
+    # Initial choices
+    print("\nYou stand before the temple entrance, a grand stone structure with intricate carvings depicting scenes of battles between gods and monsters.")
+    print("As you approach the entrance, you notice two passageways: one leads to the left, another to the right. Ahead of you lies the dark and ominous interior of the temple.")
+
+    choice = input("\nDo you (A) enter through the left passageway or (B) go straight into the temple? ")
+
+    if choice.upper() == "A":
+        passageway_a()
+    elif choice.upper() == "B":
+        temple_entrance()
+    else:
+        print("Invalid choice. Please choose A or B.")
+        start_game()
+
+def passageway_a():
+    print("\nYou enter the left passageway, finding yourself in a narrow corridor lined with cobweb-covered tapestries and flickering torches.")
+    print("As you proceed down the corridor, you hear strange noises coming from the walls – creaks, groans, and faint whispers.")
+
+    choice = input("\nDo you (A) investigate the source of the noises or (B) continue forward? ")
+
+    if choice.upper() == "A":
+        mysterious_corridor()
+    elif choice.upper() == "B":
+        temple_chamber()
+    else:
+        print("Invalid choice. Please choose A or B.")
+        passageway_a()
+
+def temple_entrance():
+    print("\nYou step into the dark interior of the temple, immediately striking a match to light your way.")
+    print("As you move deeper into the temple, you notice three doorways: one adorned with ancient symbols, another with intricate carvings of mythical creatures, and a third with no markings at all.")
+
+    choice = input("\nDo you (A) investigate the symbol-adorned doorway, (B) approach the creature-carved doorway, or (C) head through the unmarked doorway? ")
+
+    if choice.upper() == "A":
+        ancient_symbols()
+    elif choice.upper() == "B":
+        mythical_creatures()
+    elif choice.upper() == "C":
+        unknown_doors()
+    else:
+        print("Invalid choice. Please choose A, B, or C.")
+        temple_entrance()
+
+def mysterious_corridor():
+    print("\nAs you listen more closely to the whispers, you start to make out words – 'Danger ahead,' and 'Beware the guardian.'")
+    print("Suddenly, a hidden door swings open, revealing a small chamber containing a cryptic message etched into the wall.")
+
+    choice = input("\nDo you (A) decipher the message or (B) ignore it? ")
+
+    if choice.upper() == "A":
+        print("The message reads: 'To pass, answer the riddle of the elements.'")
+        print("What is your response?")
+        riddle_answer = input()
+        print(f"Your answer was correct! You proceed to the next chamber.")
+        temple_chamber()
+    elif choice.upper() == "B":
+        print("You choose to ignore the message and continue forward.")
+        passageway_a()
+    else:
+        print("Invalid choice. Please choose A or B.")
+        mysterious_corridor()
+
+def ancient_symbols():
+    print("\nThe symbol-adorned doorway appears to lead deeper into the temple's inner workings.")
+    print("As you step through, the symbols begin to glow, illuminating a hidden path forward.")
+
+    choice = input("\nDo you (A) follow the glowing path or (B) examine the symbols more closely? ")
+
+    if choice.upper() == "A":
+        print("You continue down the glowing path, finding yourself in a vast chamber filled with ancient artifacts.")
+        temple_chamber()
+    elif choice.upper() == "B":
+        print("As you study the symbols, you realize they hold the key to unlocking a powerful secret.")
+        print("Do you (A) unlock the secret or (B) keep exploring the chamber?")
+        symbol_secret()
+    else:
+        print("Invalid choice. Please choose A or B.")
+        ancient_symbols()
+
+def mythical_creatures():
+    print("\nThe creature-carved doorway leads into a realm of fantastical creatures and hidden dangers.")
+    print("As you approach, the carvings come to life – dragons, griffins, and other legendary beasts."
+
+    choice = input("\nDo you (A) engage with the creatures or (B) try to sneak past them? ")
+
+    if choice.upper() == "A":
+        print("You carefully interact with the creatures, learning their language and earning their respect.")
+        temple_chamber()
+    elif choice.upper() == "B":
+        print("As you attempt to sneak past, a mighty roar echoes through the corridor – the guardian has awakened!")
+        temple_entrance()
+    else:
+        print("Invalid choice. Please choose A or B.")
+        mythical_creatures()
+
+def unknown_doors():
+    print("\nThe unmarked doorway appears to lead into darkness and uncertainty.")
+    print("As you step forward, a cold breeze greets you, carrying the whispers of forgotten lore.")
+
+    choice = input("\nDo you (A) proceed down the dark corridor or (B) turn back? ")
+
+    if choice.upper() == "A":
+        print("You brave the darkness and discover a hidden chamber filled with ancient texts.")
+        temple_chamber()
+    elif choice.upper() == "B":
+        print("You retreat back to the main temple corridor, seeking alternative paths.")
+        temple_entrance()
+    else:
+        print("Invalid choice. Please choose A or B.")
+        unknown_doors()
+
+def temple_chamber():
+    print("\nYou find yourself in a grand chamber filled with treasures beyond your wildest dreams – gold, jewels, and ancient artifacts.")
+    print("As you explore the room, you spot a pedestal holding a small, intricately carved box.")
+
+    choice = input("\nDo you (A) open the box or (B) leave it alone? ")
+
+    if choice.upper() == "A":
+        print("You carefully lift the lid, revealing the Golden Idol. As you reach for it, the room begins to shake – the temple is sealing itself!")
+        print("Congratulations, adventurer! You have retrieved the Golden Idol and escaped the Cursed Temple.")
+        print("FINISH")
+    elif choice.upper() == "B":
+        print("You wisely decide to leave the box alone, respecting the ancient temple's secrets.")
+        print("Congratulations, adventurer! You have avoided a deadly trap and lived to tell the tale.")
+        print("FINISH")
+    else:
+        print("Invalid choice. Please choose A or B.")
+        temple_chamber()
+
+def symbol_secret():
+    print("\nAs you study the symbols further, you realize they are actually a puzzle – combining ancient knowledge with cryptic clues.")
+    print("To unlock the secret, you must answer three questions correctly.")
+
+    # Add logic to handle correct answers
+    pass
+
+start_game()
+```
+
+# And with proper logging and the OpenAI API...
+---
+
+```python
+import autogen
+
+from pathlib import Path
+
+from autogen.coding import LocalCommandLineCodeExecutor
+
+import os
+
+from dotenv import load_dotenv
+
+import logging
+
+from datetime import datetime
+
+import json
+
+  
+
+# Set up logging with more detailed formatting
+
+log_dir = Path("logs")
+
+log_dir.mkdir(exist_ok=True)
+
+log_file = log_dir / f"autogen_{datetime.now().strftime('%Y%m%d_%H%M%S')}.log"
+
+  
+
+# Create a custom formatter that includes more details
+
+class DetailedFormatter(logging.Formatter):
+
+def format(self, record):
+
+# Add thread name and process ID to log
+
+record.thread_info = f"Thread-{record.thread}"
+
+record.process_info = f"Process-{record.process}"
+
+  
+
+# Format timestamp with milliseconds
+
+record.timestamp = datetime.fromtimestamp(record.created).strftime('%Y-%m-%d %H:%M:%S.%f')[:-3]
+
+  
+
+# Create the detailed format
+
+format_str = (
+
+'%(timestamp)s | %(process_info)s | %(thread_info)s | '
+
+'%(name)s | %(levelname)s | %(message)s'
+
+)
+
+  
+
+# Set the formatter's _style._fmt
+
+self._style._fmt = format_str
+
+  
+
+return super().format(record)
+
+  
+
+# Configure logging with the custom formatter
+
+formatter = DetailedFormatter()
+
+file_handler = logging.FileHandler(log_file)
+
+file_handler.setFormatter(formatter)
+
+console_handler = logging.StreamHandler()
+
+console_handler.setFormatter(formatter)
+
+  
+
+logging.basicConfig(
+
+level=logging.DEBUG, # Changed to DEBUG for more detailed logs
+
+handlers=[file_handler, console_handler]
+
+)
+
+  
+
+logger = logging.getLogger("AutogenGame")
+
+  
+
+# Load environment variables
+
+load_dotenv()
+
+api_key = os.getenv("OPENAI_API_KEY")
+
+if not api_key:
+
+logger.error("No OpenAI API key found. Please check your .env file.")
+
+raise ValueError("No OpenAI API key found")
+
+  
+
+logger.info("Starting Autogen CYOA game")
+
+  
+
+# Create a custom termination message function that logs
+
+def is_termination_msg(msg):
+
+is_terminate = "FINISH" in msg.get("content", "")
+
+if is_terminate:
+
+logger.info("Received termination message")
+
+return is_terminate
+
+  
+
+# Enhanced agent logging classes
+
+class LoggingUserProxyAgent(autogen.UserProxyAgent):
+
+def send(self, message, recipient, request_reply=None, silent=False):
+
+log_data = {
+
+"event_type": "message_send",
+
+"sender": self.name,
+
+"recipient": recipient.name,
+
+"message_preview": message[:500], # Increased preview length
+
+"timestamp": datetime.now().isoformat(),
+
+"message_length": len(message),
+
+"request_reply": bool(request_reply),
+
+"silent_mode": silent
+
+}
+
+logger.info(f"AGENT_EVENT: {json.dumps(log_data, indent=2)}")
+
+return super().send(message, recipient, request_reply, silent)
+
+  
+
+def receive(self, message, sender, request_reply=None, silent=False):
+
+log_data = {
+
+"event_type": "message_receive",
+
+"receiver": self.name,
+
+"sender": sender.name,
+
+"message_preview": message[:500], # Increased preview length
+
+"timestamp": datetime.now().isoformat(),
+
+"message_length": len(message),
+
+"request_reply": bool(request_reply),
+
+"silent_mode": silent
+
+}
+
+logger.info(f"AGENT_EVENT: {json.dumps(log_data, indent=2)}")
+
+return super().receive(message, sender, request_reply, silent)
+
+  
+
+class LoggingAssistantAgent(autogen.AssistantAgent):
+
+def send(self, message, recipient, request_reply=None, silent=False):
+
+log_data = {
+
+"event_type": "message_send",
+
+"sender": self.name,
+
+"recipient": recipient.name,
+
+"message_preview": message[:500],
+
+"timestamp": datetime.now().isoformat(),
+
+"message_length": len(message),
+
+"request_reply": bool(request_reply),
+
+"silent_mode": silent
+
+}
+
+logger.info(f"AGENT_EVENT: {json.dumps(log_data, indent=2)}")
+
+return super().send(message, recipient, request_reply, silent)
+
+  
+
+def receive(self, message, sender, request_reply=None, silent=False):
+
+log_data = {
+
+"event_type": "message_receive",
+
+"receiver": self.name,
+
+"sender": sender.name,
+
+"message_preview": message[:500],
+
+"timestamp": datetime.now().isoformat(),
+
+"message_length": len(message),
+
+"request_reply": bool(request_reply),
+
+"silent_mode": silent
+
+}
+
+logger.info(f"AGENT_EVENT: {json.dumps(log_data, indent=2)}")
+
+return super().receive(message, sender, request_reply, silent)
+
+  
+
+# Configuration for OpenAI
+
+config_list = [
+
+{
+
+"model": "gpt-4o-mini",
+
+"api_key": api_key
+
+}
+
+]
+
+  
+
+# Set up code execution environment
+
+workdir = Path("coding")
+
+workdir.mkdir(exist_ok=True)
+
+  
+
+# Enhanced code executor with logging
+
+class LoggingCodeExecutor(LocalCommandLineCodeExecutor):
+
+def execute_code(self, code: str) -> str:
+
+log_data = {
+
+"event_type": "code_execution",
+
+"timestamp": datetime.now().isoformat(),
+
+"code_preview": code[:500],
+
+"code_length": len(code),
+
+"working_directory": str(self.work_dir)
+
+}
+
+logger.info(f"CODE_EXECUTION: {json.dumps(log_data, indent=2)}")
+
+  
+
+try:
+
+result = super().execute_code(code)
+
+log_data = {
+
+"event_type": "code_execution_result",
+
+"timestamp": datetime.now().isoformat(),
+
+"result_preview": result[:500] if result else "No output",
+
+"result_length": len(result) if result else 0,
+
+"success": True
+
+}
+
+logger.info(f"CODE_RESULT: {json.dumps(log_data, indent=2)}")
+
+return result
+
+except Exception as e:
+
+log_data = {
+
+"event_type": "code_execution_error",
+
+"timestamp": datetime.now().isoformat(),
+
+"error_type": type(e).__name__,
+
+"error_message": str(e)
+
+}
+
+logger.error(f"CODE_ERROR: {json.dumps(log_data, indent=2)}")
+
+raise
+
+  
+
+# Set up code execution environment
+
+workdir = Path("coding")
+
+workdir.mkdir(exist_ok=True)
+
+code_executor = LoggingCodeExecutor(work_dir=workdir)
+
+  
+
+logger.info("Setting up agents")
+
+  
+
+# Create the agents using logging versions
+
+assistant = LoggingAssistantAgent(
+
+name="assistant",
+
+system_message="""You are a Python developer creating a Choose Your Own Adventure game.
+
+Your code should implement:
+
+1. Text-based UI with three main choices plus an 'other' option
+
+2. Game starts with Sam Iker waking from a skyscraper dream
+
+3. Title: 'Teleport Massive CYOA'
+
+4. Logging system for game setup and execution
+
+5. Obsidian-style markdown files for events/choices
+
+6. Scenario generation using markdown files
+
+7. Tables for tracking:
+
+- Scenario index
+
+- Character stats/states
+
+- Location stats/states
+
+- Item stats/states
+
+- Player actions
+
+8. Game state management via librarian function
+
+9. Character dialogue generation based on game state
+
+  
+
+Write code incrementally, testing each component. Use clear comments and logging.""",
+
+llm_config={"config_list": config_list}
+
+)
+
+  
+
+user_proxy = LoggingUserProxyAgent(
+
+name="user_proxy",
+
+human_input_mode="NEVER",
+
+max_consecutive_auto_reply=10,
+
+code_execution_config={"executor": code_executor},
+
+is_termination_msg=is_termination_msg
+
+)
+
+  
+
+logger.info("Starting chat")
+
+  
+
+# Start the chat
+
+try:
+
+chat_result = user_proxy.initiate_chat(
+
+assistant,
+
+message="""Create a text-based Choose Your Own Adventure game with the following requirements:
+
+1. Title: 'Teleport Massive CYOA'
+
+2. Start with Sam Iker waking from a dream about flying around a skyscraper
+
+3. Each scene should have 3 main choices plus an 'other' option
+
+4. Generate and use markdown files for scenarios
+
+5. Implement tracking tables for game state
+
+6. Include logging for all game actions
+
+7. Create a librarian function to manage game state
+
+8. Generate character dialogue based on current game state
+
+9. Keep the implementation clean and modular
+
+  
+
+Please start by creating the basic game structure and we'll build up from there."""
+
+)
+
+logger.info("Chat completed successfully")
+
+except Exception as e:
+
+logger.error(f"Error during chat: {str(e)}", exc_info=True)
+
+raise
+
+  
+
+logger.info("Game session ended")
+```
+
+***DISCLAIMER*** -- Please know this will execute code on your local system. This method is NOT advised.
+
+![[Screen Shot 2024-11-15 at 7.48.54 PM.png]]
+I got AI generating code that will make AI generate more code that will make a game that uses code to generate AI...
+...um...
+
+Fri, 11/15/2024, 19:49
+The moment of truth...
+## Here's Ollama's attempt #2
+
+```python
+import os
+import random
+from datetime import datetime, timedelta
+import json
+
+class Game:
+    def __init__(self):
+        self.scenario_index = []
+        self.character_table = {
+            'Sam Iker': {'health': 100, 'hunger': 50, 'thirst': 50}
+        }
+        self.location_table = {
+            'Skyscraper': {'description': '', 'security': 0, 'trap': False}
+        }
+        self.item_table = {
+            'Medkit': {'healing': 20, 'durability': 100},
+            'Water Bottle': {'hydration': 30, 'durability': 50}
+        }
+        self.action_table = {}
+        self.librarian()
+
+    def librarian(self):
+        scenario_file_name = "scenario.md"
+        location_file_name = "location.md"
+        item_file_name = "item.md"
+
+        if os.path.exists(scenario_file_name):
+            with open(scenario_file_name, 'r') as file:
+                for line in file.readlines():
+                    if line.startswith('#'):
+                        self.scenario_index.append(line.strip())
+
+        if os.path.exists(location_file_name):
+            with open(location_file_name, 'r') as file:
+                location_data = json.load(file)
+                self.location_table['Skyscraper']['description'] = location_data['description']
+
+        if os.path.exists(item_file_name):
+            with open(item_file_name, 'r') as file:
+                item_data = json.load(file)
+                self.item_table['Medkit']['healing'] = item_data['healing']
+                self.item_table['Water Bottle']['hydration'] = item_data['hydration']
+
+    def run(self):
+        print("Teleport Massive CYOA")
+        print("------------------------")
+
+        while True:
+            current_scenario_index = random.choice(self.scenario_index)
+            scenario_file_name = "scenario_" + str(current_scenario_index) + ".md"
+            with open(scenario_file_name, 'r') as file:
+                print(file.read())
+                print("\nChoices:")
+                choices = []
+                for line in file.readlines():
+                    if line.strip().startswith('###'):
+                        choices.append(line.strip().replace("### ", "1. ").replace("#### ", "2. ").replace("##### ", "3. "))
+                    elif line.strip() == '':
+                        choices.append('4. Other')
+                print("\n".join(choices))
+
+            choice = input("Choose an option: ")
+            if choice in ['1', '2', '3']:
+                action_name = f"action_{choice}"
+                if action_name not in self.action_table:
+                    self.librarian()
+                current_scenario_index = random.choice(self.scenario_index)
+                scenario_file_name = "scenario_" + str(current_scenario_index) + ".md"
+                with open(scenario_file_name, 'r') as file:
+                    print(file.read())
+                    print("\nChoices:")
+                    choices = []
+                    for line in file.readlines():
+                        if line.strip().startswith('###'):
+                            choices.append(line.strip().replace("### ", "1. ").replace("#### ", "2. "))
+                        elif line.strip() == '':
+                            choices.append('3. Other')
+                    print("\n".join(choices))
+
+                chosen_action = random.choice([choice for choice in choices if choice != 'Other'])
+                print(f"You chose to {chosen_action}.")
+
+                # Update tables
+                if action_name not in self.action_table:
+                    self.librarian()
+
+                # Generate character dialogue
+                character_dialogue = f"{self.character_table['Sam Iker']['name']} says: '{self.character_table['Sam Iker']['description']}'"
+
+                print("\nNew Action:")
+                new_action = {
+                    'action': chosen_action,
+                    'player_choice': chosen_action,
+                    'character_dialogue': character_dialogue
+                }
+                self.action_table[action_name] = new_action
+
+            elif choice == 'Other':
+                action_name = f"action_{choice}"
+                if action_name not in self.action_table:
+                    self.librarian()
+                current_scenario_index = random.choice(self.scenario_index)
+                scenario_file_name = "scenario_" + str(current_scenario_index) + ".md"
+                with open(scenario_file_name, 'r') as file:
+                    print(file.read())
+                    print("\nChoices:")
+                    choices = []
+                    for line in file.readlines():
+                        if line.strip().startswith('###'):
+                            choices.append(line.strip().replace("### ", "1. ").replace("#### ", "2. "))
+                        elif line.strip() == '':
+                            choices.append('3. Other')
+                    print("\n".join(choices))
+
+                chosen_action = random.choice([choice for choice in choices if choice != 'Other'])
+                print(f"You chose to {chosen_action}.")
+
+                # Update tables
+                if action_name not in self.action_table:
+                    self.librarian()
+
+                # Generate character dialogue
+                character_dialogue = f"{self.character_table['Sam Iker']['name']} says: '{self.character_table['Sam Iker']['description']}'"
+
+                print("\nNew Action:")
+                new_action = {
+                    'action': chosen_action,
+                    'player_choice': chosen_action,
+                    'character_dialogue': character_dialogue
+                }
+                self.action_table[action_name] = new_action
+
+            # Update character table
+            if 'hunger' in new_action['character_dialogue']:
+                self.character_table['Sam Iker']['hunger'] += 10
+            if 'thirst' in new_action['character_dialogue']:
+                self.character_table['Sam Iker']['thirst'] += 10
+
+            # Update action table
+            for key, value in self.action_table.items():
+                if value == new_action:
+                    print(f"Updated {key}: {new_action}")
+                    break
+
+        print("\nFINISH")
+
+game = Game()
+game.run()
+```
+
+Someone run that and let me now if it works.
+
+---
+## Claude's OpenAI AutoGen Implementation
+
+Phew, that's a mouthful
+
+Fri, 11/15/2024, 20:10
+I've just asked [[Claude]] to generate some code that will have AutoGen write down the code it generates as it's generating it.
+![[Screen Shot 2024-11-15 at 8.10.40 PM.png]]
+
+And just like that, the directory exists...
+![[Screen Shot 2024-11-15 at 8.12.05 PM.png]]
+
+And after many rounds of AI error troubleshooting (which means copy paste with a "help my code not working" prompt)...
+
+Fri, 11/15/2024, 20:54
+Ok after **MANY** iterations of AI troubleshooting...I gave up. Lol. I need to focus the agent and I'm not willing or able to do that. I came here to rest and I'm gonna rest god dammit.
+![[Screen Shot 2024-11-15 at 8.56.18 PM.png]]
+
+And there it was.
+Just as I was about to give up. Lo and behold...the Ollama script worked. It updated the .md file with the first version of the chapter, but not the second, and I don't even care. I'm gonna troubleshoot it later. 
+It updates the .md file at the beginning that's all I care about for now I did it I got an AI to write a file for me about a story I loaded into it for Teleport Massive.
+
+I can engineer the rest of it as I have time and space. More powerful AI will be coming out soon that can help me. Hell, maybe the engineers ofer at Replit will solve it and I won't have.
+
+Regardless...
+
+I'm out. It's relaxationg time.
+
+Thank you for a very very fruitful day.
+
+Fri, 11/15/2024, 21:03
+
